--- a/Verification/UART_Agent/modelsim.ini
+++ b/Verification/UART_Agent/modelsim.ini
@@ -15,7 +15,7 @@ INIVersion = "2024.2"
 ;
 
 [Library]
-others = /u/patilsid/modelsim.ini
+others = /pkgs/mentor/questa/2024.2/questasim/modelsim.ini
 ;
 ; VITAL concerns:
 ;
@@ -64,7 +64,6 @@ others = /u/patilsid/modelsim.ini
 ;
 ; AutoLibMapping = 0
 
-work = work
 [BC_COMPAT]
 ; Start of Backward Compatibility Section
 ; The Variables in this section are dedicated for the Backward Compatibility feature
@@ -2219,64 +2218,3 @@ suppress = 8780 ;an explanation can be had by running: verror 8780
 ; This setting is applied together with FlatLibPageDeletePercentage.
 ; FlatLibPageDeleteThreshold = 1000
 
-[Project]
-** Warning: ; Warning -- Do not edit the project properties directly.
-;            Property names are dynamic in nature and property
-;            values have special syntax.  Changing property data directly
-;            can result in a corrupt MPF file.  All project properties
-;            can be modified through project window dialogs.
-Project_Version = 6
-Project_DefaultLib = work
-Project_SortMethod = unused
-Project_Files_Count = 1
-Project_File_0 = /u/patilsid/ECE571-F24/UART/Testbench/uart_gen.sv
-Project_File_P_0 = cover_toggle 0 file_type systemverilog group_id 0 cover_exttoggle 0 cover_nofec 0 cover_cond 0 vlog_1995compat SV vlog_nodebug 0 folder {Top Level} last_compile 0 cover_fsm 0 cover_branch 0 vlog_noload 0 vlog_enable0In 0 cover_excludedefault 0 vlog_disableopt 0 cover_covercells 0 cover_optlevel 3 vlog_hazard 0 vlog_showsource 0 voptflow 1 ood 1 vlog_0InOptions {} toggle - vlog_options {} compile_to work vlog_upper 0 cover_noshort 0 compile_order 0 dont_compile 0 cover_expr 0 cover_stmt 0
-Project_Sim_Count = 0
-Project_Folder_Count = 0
-Echo_Compile_Output = 0
-Save_Compile_Report = 1
-Project_Opt_Count = 0
-ForceSoftPaths = 0
-ProjectStatusDelay = 5000
-VERILOG_DoubleClick = Edit
-VERILOG_CustomDoubleClick = 
-SYSTEMVERILOG_DoubleClick = Edit
-SYSTEMVERILOG_CustomDoubleClick = 
-VHDL_DoubleClick = Edit
-VHDL_CustomDoubleClick = 
-PSL_DoubleClick = Edit
-PSL_CustomDoubleClick = 
-TEXT_DoubleClick = Edit
-TEXT_CustomDoubleClick = 
-SYSTEMC_DoubleClick = Edit
-SYSTEMC_CustomDoubleClick = 
-TCL_DoubleClick = Edit
-TCL_CustomDoubleClick = 
-MACRO_DoubleClick = Edit
-MACRO_CustomDoubleClick = 
-VCD_DoubleClick = Edit
-VCD_CustomDoubleClick = 
-SDF_DoubleClick = Edit
-SDF_CustomDoubleClick = 
-XML_DoubleClick = Edit
-XML_CustomDoubleClick = 
-LOGFILE_DoubleClick = Edit
-LOGFILE_CustomDoubleClick = 
-UCDB_DoubleClick = Edit
-UCDB_CustomDoubleClick = 
-TDB_DoubleClick = Edit
-TDB_CustomDoubleClick = 
-UPF_DoubleClick = Edit
-UPF_CustomDoubleClick = 
-PCF_DoubleClick = Edit
-PCF_CustomDoubleClick = 
-PROJECT_DoubleClick = Edit
-PROJECT_CustomDoubleClick = 
-VRM_DoubleClick = Edit
-VRM_CustomDoubleClick = 
-DEBUGDATABASE_DoubleClick = Edit
-DEBUGDATABASE_CustomDoubleClick = 
-DEBUGARCHIVE_DoubleClick = Edit
-DEBUGARCHIVE_CustomDoubleClick = 
-Project_Major_Version = 2024
-Project_Minor_Version = 2
